--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Spicetify-Collapsing-Library",
+    "name": "Spicetify Collapsing Library",
     "description": "This turns the library in one with expanding folders without having to click on the little triangle.",
     "preview": "screenshot.png",
     "main": "collapsing-library.js",
